Initial terraform set up

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "terraform/da-terraform-modules"]
 	path = terraform/da-terraform-modules
 	url = https://github.com/nationalarchives/da-terraform-modules.git
+[submodule "terraform/da-terraform-configurations"]
+	path = terraform/da-terraform-configurations
+	url = https://github.com/nationalarchives/da-terraform-configurations.git
