--- a/.github/workflows/tdr_test.yml
+++ b/.github/workflows/tdr_test.yml
@@ -7,7 +7,7 @@ on:
       - release-*
 permissions:
   id-token: write
-  contents: read
+  contents: write
 jobs:
   check:
     name: Check terraform
@@ -15,8 +15,8 @@ jobs:
     with:
       terraform-version: '1.5.0'
     secrets:
-      MANAGEMENT_ACCOUNT: ${{ secrets.MANAGEMENT_ACCOUNT }}
-      WORKFLOW_PAT: ${{ secrets.WORKFLOW_PAT }}
+      MANAGEMENT_ACCOUNT: ${{ secrets.TDR_MANAGEMENT_ACCOUNT }}
+      WORKFLOW_PAT: ${{ secrets.TDR_WORKFLOW_PAT }}
   test:
     name: Lambda test
     uses: nationalarchives/tdr-github-actions/.github/workflows/tdr_test.yml@main
@@ -25,4 +25,4 @@ jobs:
       test-command: |
         sbt test
     secrets:
-      SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      SLACK_WEBHOOK: ${{ secrets.TDR_SLACK_WEBHOOK }}
