--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,12 @@
-tableName = "da-reference-counter"
-key = "v1"
-keyVal = "filePieceCounter"
-pieceCounter = "pieceCounter"
-queryParam = "numberofrefs"
+dynamodb {
+  tableName = "da-reference-counter"
+  tableName = ${?TABLE_NAME}
+  key = "v1"
+  key = ${?REFERENCE_KEY}
+  keyVal = "filePieceCounter"
+  keyVal = ${?REFERENCE_KEY_VALUE}
+  pieceCounter = "pieceCounter"
+  pieceCounter = ${?PIECE_COUNTER}
+  queryParam = "numberofrefs"
+  queryParam = ${?QUERY_PARAM}
+}
