remove references to "piece"

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,10 +3,10 @@ dynamodb {
   tableName = ${?TABLE_NAME}
   key = "v1"
   key = ${?REFERENCE_KEY}
-  keyVal = "filePieceCounter"
+  keyVal = "fileCounter"
   keyVal = ${?REFERENCE_KEY_VALUE}
-  pieceCounter = "pieceCounter"
-  pieceCounter = ${?PIECE_COUNTER}
+  referenceCounter = "referenceCounter"
+  referenceCounter = ${?REFERENCE_COUNTER}
   queryParam = "numberofrefs"
   queryParam = ${?QUERY_PARAM}
 }
