--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,7 +1,7 @@
 dynamodb {
   tableName = "da-reference-counter"
   key = "v1"
-  keyVal = "filePieceCounter"
-  pieceCounter = "pieceCounter"
+  keyVal = "fileCounter"
+  referenceCounter = "referenceCounter"
   queryParam = "numberofrefs"
 }
