Set limit for numberofrefs

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,4 +9,6 @@ dynamodb {
   referenceCounter = ${?REFERENCE_COUNTER}
   queryParam = "numberofrefs"
   queryParam = ${?QUERY_PARAM}
+  referenceLimit = 5000
+  referenceLimit = ${?REFERENCE_LIMIT}
 }
