--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -4,4 +4,5 @@ dynamodb {
   keyVal = "fileCounter"
   referenceCounter = "referenceCounter"
   queryParam = "numberofrefs"
+  referenceLimit = 5000
 }
