Add retry logic to Counter.scala and add unit test

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,4 +11,6 @@ dynamodb {
   queryParam = ${?QUERY_PARAM}
   referenceLimit = 5000
   referenceLimit = ${?REFERENCE_LIMIT}
+  referenceRetries = 2
+  referenceRetries = ${?REFERENCE_RETRIES}
 }
