--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -5,4 +5,5 @@ dynamodb {
   referenceCounter = "referenceCounter"
   queryParam = "numberofrefs"
   referenceLimit = 5000
+  referenceRetries = 2
 }
