--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -7,7 +7,7 @@ queue_rules:
 pull_request_rules:
   - name: automatic merge for Scala Steward
     conditions:
-      - author=tna-digital-archiving-jenkins
+      - author=tna-da-bot
       - "check-success=Check terraform / terraform-check"
       - "check-success=Lambda test / test"
       - "check-success=security/snyk (nationalarchives)"
