--- a/.github/workflows/tdr_build.yml
+++ b/.github/workflows/tdr_build.yml
@@ -7,6 +7,7 @@ jobs:
   pre-deploy:
     uses: nationalarchives/tdr-github-actions/.github/workflows/lambda_build.yml@main
     with:
+      lambda-name: reference-generator
       repo-name: da-reference-generator
       artifact-name: reference-generator
       build-command: |
