--- a/.github/workflows/tdr_deploy.yml
+++ b/.github/workflows/tdr_deploy.yml
@@ -20,7 +20,7 @@ permissions:
   contents: write
 jobs:
   apply:
-    uses: nationalarchives/tdr-github-actions/.github/workflows/terraform_apply.yml@main
+    uses: nationalarchives/tdr-github-actions/.github/workflows/terraform_apply.yml@e6c5d8399b84617bea5a6b9d99f84049385e2dbb # v0.0.4
     with:
       repo-name: da-reference-generator
       environment: ${{ github.event.inputs.environment }}
@@ -37,7 +37,7 @@ jobs:
       PROD_ACCOUNT_NUMBER: ${{ secrets.TDR_PROD_ACCOUNT_NUMBER }}
   deploy:
     needs: apply
-    uses: nationalarchives/tdr-github-actions/.github/workflows/lambda_deploy.yml@main
+    uses: nationalarchives/tdr-github-actions/.github/workflows/lambda_deploy.yml@e6c5d8399b84617bea5a6b9d99f84049385e2dbb # v0.0.4
     with:
       lambda-name: reference-generator
       deployment-package: reference-generator.jar
