Update to tdr-github-actions v0.0.5

--- a/.github/workflows/tdr_build.yml
+++ b/.github/workflows/tdr_build.yml
@@ -5,10 +5,10 @@ on:
       - main
 jobs:
   pre-deploy:
-    uses: nationalarchives/tdr-github-actions/.github/workflows/lambda_build.yml@e6c5d8399b84617bea5a6b9d99f84049385e2dbb # v0.0.4
+    uses: nationalarchives/tdr-github-actions/.github/workflows/lambda_build.yml@288052e0133a47d2f12924edc2bc5553c1b2d73a # v0.0.5
     with:
       lambda-name: reference-generator
-      repo-name: da-reference-generator
+      repo-name: da-reference-generators
       artifact-name: reference-generator
       build-command: |
         sbt assembly
