Specify Java 17 in TDR build workflow

--- a/.github/workflows/tdr_build.yml
+++ b/.github/workflows/tdr_build.yml
@@ -10,6 +10,7 @@ jobs:
       lambda-name: reference-generator
       repo-name: da-reference-generator
       artifact-name: reference-generator
+      java-version: '17'
       build-command: |
         sbt assembly
     secrets:
