--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,6 +1,7 @@
 queue_rules:
   - name: default
-    conditions:
+    batch_size: 1
+    queue_conditions:
       - "check-success=Check terraform / terraform-check"
       - "check-success=Lambda test / test"
       - "check-success=security/snyk (nationalarchives)"
